--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" -o css/style.prefix.css  css/style.comp.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
 
-    "build:css":"npm-run-all compile:sass concat:css prefix:css compress:css" 
+    "build:css":"npm-run-all compile:sass prefix:css compress:css" 
   },
   "repository": {
     "type": "git",
